Fix horizontal column spacing in the presence of stacked boxes

--- a/resource/support/decker.scss
+++ b/resource/support/decker.scss
@@ -313,7 +313,7 @@ body {
                         display:flex;
                         flex-flow: row nowrap;
 
-                        $margin-size: 0.74em;
+                        $margin-size: 1em;
 
                         div.column {
                             flex: 1 1 0%;
